Simplify port setting
Set HTTP_PORT and HTTPS_PORT at either build or run time.
Remove port 80 specific Dockerfile and entrypoint.sh